fix buil.gradle for javafx modules